--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-    "dependencies": {
-        "cheerio" : "0.12.3",
-        "express" : "3.4.0",
-        "mustache": "0.7.2",
-        "q"       : "0.9.7"
-    }
+  "dependencies": {
+    "bluebird": "^2.9.34",
+    "cheerio": "0.12.3",
+    "express": "4.1.0",
+    "mustache": "0.7.2",
+    "q": "0.9.7",
+    "request": "^2.61.0"
+  },
+  "devDependencies": {
+    "supertest": "^1.0.1"
+  }
 }
