--- a/assets/bower.json
+++ b/assets/bower.json
@@ -17,6 +17,7 @@
     "bootstrap": "~3.3.5",
     "angular": "~1.4.4",
     "angular-resource": "~1.4.4",
-    "angular-route": "~1.4.4"
+    "angular-route": "~1.4.4",
+    "underscore": "~1.8.3"
   }
 }
