--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "4.8.0",
     "mustache": "0.7.2",
     "q": "0.9.7",
-    "request": "^2.61.0"
+    "request": "^2.61.0",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "broccoli-funnel": "^0.2.8",
